--- a/public/index.html
+++ b/public/index.html
@@ -119,7 +119,27 @@
 <body>
     <div class="container">
         <h1>🌟 Vimshottari Dasha Calculator</h1>
+        <code> https://apidash-production.up.railway.app/api/vimshottari</code>
 
+        <code>
+            Payload:
+   year
+1993
+month
+10
+day
+29
+hour
+6
+minute
+45
+lat
+8.964
+lon
+77.315
+tz
+5.5
+</code>
         <form id="dashaForm">
             <div class="row">
                 <div class="form-group">
