--- a/public/index.html
+++ b/public/index.html
@@ -290,6 +290,11 @@
 
 <body>
     <div class="container">
+        <div style="text-align: right; margin-bottom: 20px;">
+            <a href="match.html"
+                style="text-decoration: none; color: #667eea; font-weight: bold; background: #f8f9fa; padding: 10px 20px; border-radius: 30px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">❤️
+                Check Marriage Match →</a>
+        </div>
         <h1>🌟 வேத ஜோதிடம் கணக்கீடு</h1>
         <p class="subtitle">Vedic Astrology Calculator - Complete Birth Chart Analysis</p>
 
