--- a/public/index.html
+++ b/public/index.html
@@ -290,10 +290,13 @@
 
 <body>
     <div class="container">
-        <div style="text-align: right; margin-bottom: 20px;">
+        <div style="text-align: right; margin-bottom: 20px; display: flex; gap: 10px; justify-content: flex-end;">
             <a href="match.html"
                 style="text-decoration: none; color: #667eea; font-weight: bold; background: #f8f9fa; padding: 10px 20px; border-radius: 30px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">❤️
                 Check Marriage Match →</a>
+            <a href="horoscope.html"
+                style="text-decoration: none; color: #9b59b6; font-weight: bold; background: #f8f9fa; padding: 10px 20px; border-radius: 30px; box-shadow: 0 2px 5px rgba(0,0,0,0.1);">🔮
+                Daily Horoscope →</a>
         </div>
         <h1>🌟 வேத ஜோதிடம் கணக்கீடு</h1>
         <p class="subtitle">Vedic Astrology Calculator - Complete Birth Chart Analysis</p>
