--- a/public/match.html
+++ b/public/match.html
@@ -40,7 +40,7 @@
             background: white;
             padding: 10px 20px;
             border-radius: 30px;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
             transition: transform 0.2s;
         }
 
@@ -153,8 +153,15 @@
         }
 
         @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px); }
-            to { opacity: 1; transform: translateY(0); }
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         .score-card {
@@ -169,7 +176,7 @@
         .score-circle {
             width: 120px;
             height: 120px;
-            background: rgba(255,255,255,0.2);
+            background: rgba(255, 255, 255, 0.2);
             border-radius: 50%;
             margin: 0 auto 15px;
             display: flex;
@@ -177,7 +184,7 @@
             justify-content: center;
             font-size: 2.5em;
             font-weight: 800;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
         }
 
         .stars-info {
@@ -191,7 +198,7 @@
             background: white;
             padding: 20px;
             border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
             text-align: center;
             border-left: 5px solid #ff6b6b;
         }
@@ -220,7 +227,7 @@
             background: white;
             padding: 20px;
             border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -274,7 +281,8 @@
 <body>
     <div class="container">
         <div class="header-nav">
-            <a href="index.html">← Back to Chart Calculator</a>
+            <a href="index.html">🏠 Home</a>
+            <a href="horoscope.html">🔮 Daily Horoscope</a>
         </div>
 
         <h1>💑 திருமணப் பொருத்தம்</h1>
@@ -428,7 +436,7 @@
 
                 const data = await response.json();
 
-                if(!response.ok) throw new Error(data.error || 'Failed to calculate');
+                if (!response.ok) throw new Error(data.error || 'Failed to calculate');
 
                 renderResults(data);
 
