--- a/public/horoscope.html
+++ b/public/horoscope.html
@@ -201,7 +201,8 @@
             font-size: 1.3em;
             color: #333;
             font-weight: 600;
-            line-height: 1.5;
+            line-height: 1.6;
+            white-space: pre-line;
         }
 
         .transit-grid {
